--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         
         <div class="relative z-10 text-center px-4 max-w-4xl mx-auto space-y-6" data-aos="fade-up">
             <span class="inline-block py-1 px-3 rounded-full bg-brand/20 border border-brand/40 text-brand-light text-sm font-semibold tracking-wider uppercase mb-2 backdrop-blur-sm">
-                Premium Construction Materials
+                උසස්ම තත්වයේ ගඩොල් අපෙන්
             </span>
             <h1 class="text-5xl md:text-7xl font-bold leading-tight tracking-tight">
                 Build Stronger with <br/>
@@ -233,3 +233,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
